[gd_scene load_steps=3 format=3 uid="uid://ppnujrnc2q16"]

[ext_resource type="Texture2D" uid="uid://d17s5pc6uj6xs" path="res://UI/Habit.png" id="1_mimj8"]
[ext_resource type="Script" path="res://daily.gd" id="2_w68uc"]

[node name="daily" type="TextureRect"]
offset_right = 512.0
offset_bottom = 128.0
texture = ExtResource("1_mimj8")
script = ExtResource("2_w68uc")

[node name="habit" type="OptionButton" parent="."]
layout_mode = 0
offset_right = 180.0
offset_bottom = 126.0
allow_reselect = true

[node name="tipe" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 180.0
offset_right = 360.0
offset_bottom = 126.0
allow_reselect = true

[node name="stat" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -63.0
offset_bottom = 63.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
editable = false

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 451.0
offset_top = 8.0
offset_right = 503.0
offset_bottom = 39.0
text = "NOTE"

[connection signal="item_selected" from="habit" to="." method="_on_habit_item_selected"]
[connection signal="item_selected" from="tipe" to="." method="_on_tipe_item_selected"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
